# OOP_BMSTU_5

./: .gitignore  canvas.cpp  canvas.h  cube.cpp  cube.h  cube.txt  draw.cpp  draw.h  error_handling.cpp  error_handling.h  figure.cpp  figure.h  funcs.cpp  funcs.h  graph.cpp  graph.h  headers.h  io.cpp  io.h  links.cpp  links.h  main.cpp  main_window.cpp  main_window.h  painter.cpp  painter.h  point.cpp  point.h  point_proc.cpp  point_proc.h  task_manager.cpp  task_manager.h  transform_fig.cpp  transform_fig.h
include/: figure.h  headers.h  io.h  links.h  painter.h  point.h  point_proc.h  task_manager.h  transform_fig.h
lab1/: CMakeLists.txt  cube.txt
lab1/include/: canvas.h  error_handling.h  figure.h  graph.h  main_window.h
lab1/model/: window.ui
lab1/src/: canvas.cpp  figure.cpp  main_window.cpp  point.cpp  task_manager.cpp
lab2/: BaseIter.cpp  BaseIter.h  BaseVector.cpp  BaseVector.h  CMakeLists.txt  ConstIterator.h  Iterator.h  ReverseConstIterator.h  ReverseIterator.h  Vector.h  Vector.hpp  main.cpp  my_errors.h
lab3/: lab_3_oop.drawio
lab3/libs/driver/src/configuration/libconf/: libconf_configuration.h
lab4/: .$uml.xml.bkp  .$uml.xml.dtmp
lab4/libs/driver/src/cabin/: cabin.cpp  cabin.h
lab4/libs/driver/src/control_panel/: control_panel.cpp
lab4/libs/driver/src/door/: door.cpp  door.h
lab5/: .$lab_05.xml.bkp  .$lab_05.xml.dtmp
src/: canvas.cpp  error_handling.cpp  figure.cpp  graph.cpp  io.cpp  links.cpp  main.cpp  painter.cpp  point.cpp  point_proc.cpp  transform_fig.cpp
